<resources>
    <string name="app_name">JavaDict</string>

    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="login_sign_up">Don\'t have an account? Sign up</string>

    <string name="register_title">Register</string>
    <string name="sign_up_password">Password (Minimum 6 characters)</string>
    <string name="sign_up">Sign up</string>
    <string name="register_sign_in">Already have an account? Sign in</string>

    <string name="current_user">Current_user@mail.com</string>
    <string name="logout">Log out</string>

    <string name="your_term">Your Terms</string>
    <string name="your_favorite_term">Your Favorite Terms</string>

    <string name="search">Search…</string>

    <string name="term_title">Term title</string>
    <string name="term_content">Term content</string>

    <string name="new_term">New Term</string>
    <string name="add_term">Add new term</string>
    <string name="add_success">Successfully added!</string>
    <string name="add_failed">Please fill out all fields.</string>

    <string name="back">Back</string>
    <string name="back_title">Exit?</string>
    <string name="back_confirm_not_to_add">Are you sure you want to return without saving?</string>

    <string name="edit_term">Edit Term</string>
    <string name="update_term">Update current term</string>
    <string name="edit_favorite_term">Edit Favorite Term</string>
    <string name="update_favorite_term">Update current favorite term</string>
    <string name="update_success">Successfully updated!</string>


    <string name="delete_title">Delete?</string>
    <string name="back_confirm_to_delete">Are you sure you want to delete?</string>
    <string name="delete_success">Successfully deleted!</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="term_list">Term List</string>
    <string name="favorite_term_list">Favorite Term List</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="dark_theme">Dark theme</string>

    <string name="about_content">This app is designed to write down new terms in Java™</string>
</resources>